initial home page

--- a/index.html
+++ b/index.html
@@ -51,61 +51,34 @@
 </div>
 -->
   <header>
-    <div class="columns is-centered">
-      <div class="column">
-        <div class="columns">
-          <div class="column">
-            <span class="groom-name">
-            Frank
-            </span>
-          </div>
-        </div>
-      </div>
-      <div class="column is-narrow kiss-container" style="width:160px">
-        <div class="columns">
-          <div class="column">
-            <span class="groom-korean">프랭크</span>
-          </div>
-        </div>
-        <div class="columns">
-          <div class="column">
-            <img src="./kiss.jpeg" alt="" class="couple-image">
-            <div id="couple-image-bg"></div>
-          </div>
-        </div>
-        <div class="columns">
-          <div class="column">
-            <span class="bride-korean">남수영</span>
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="columns">
-          <div class="column">
-            <span class="bride-name">
-            Su-Young
-            </span>
-          </div>
-        </div>
-      </div>
-    </div>
+  	<center>
+        <span class="couple-name"> FRANCIS & SUYOUNG </span>
+    </center>
   </header>
   
-<section>
-<div id="bf_slideshow" class="carousel slide" data-ride="carousel">
-  <ul class="carousel-inner">
-    <li class="item active"><div class="embed-responsive embed-responsive-16by9 youtube-embed-responsive" style="width: ; left: 50%; transform: translateX(-50%); ">
-        <iframe id="bg-video" class="embed-responsive-item youtube-embed" src="https://www.youtube.com/embed/n1r1BamWsDE?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=1&amp;loop=1&amp;playlist=n1r1BamWsDE&amp;vq=hd1080"width: ;height: ; left:50%; top: 50%; transform: translate(-50%,-50%); "></iframe>
-    </li> 
-  </ul>
+  <video autoplay loop id="video-background" muted plays-inline>
+  	<source src="./IMG_4596_2.mov">
+  </video>
 
-  <div id="scroll-icon">
-    <a href="#TODO">
-      <span></span>
-      Scroll
-    </a>
-  </div>
-</div>
+  <!--
+	<div id="scroll-icon">
+	    <a href="#TODO">
+	      <span></span>
+	      Scroll
+	    </a>
+  	</div>
+  -->
+
+<section>
+	<div style="height:75vh">
+	</div>
+	<center>
+		<button id="rsvp-button"> RSVP</button>
+	</center>
+	<div style="height:25vh">
+
+</section>
+
 
 <!--
 <div id="panel-w590ad4715e753-0-0-1" class="so-panel widget widget_text" data-index="1">
@@ -121,12 +94,13 @@
 
 -->
 
+<!--
 <section class="hero is-large" id="announcement">
   <div class="hero-body">
     <div class="container">
       <div class="columns is-centered has-text-centered">
         <div class="column">
-          <img class="announce-between" src="./milk_wed.png" />
+          <img class="announce-between" src="./img/milk_wed.png" />
         </div>
       </div>
       <div class="columns is-centered has-text-centered">
@@ -153,16 +127,15 @@
 
     </div>
   </div>
-  <img src="./tree_1.png" id="announce-tree-1"/>
-  <img src="./tree_4.png" id="announce-tree-2"/>
-  <img src="./tree_3.png" id="announce-tree-3"/>
-  <img src="./tree_2.png" id="announce-tree-4"/>
+  <img src="./img/tree_1.png" id="announce-tree-1"/>
+  <img src="./img/tree_4.png" id="announce-tree-2"/>
+  <img src="./img/tree_3.png" id="announce-tree-3"/>
+  <img src="./img/tree_2.png" id="announce-tree-4"/>
 </section>
 
 
 <div id='map'></div>
 
-<!--
 
 <section class="hero is-large" id="timeline">
   <div class="hero-body">
@@ -175,8 +148,6 @@
   </div>
 </section>
 
--->
-
 <section id="registry">
   <div class="container">
     <center>
@@ -184,7 +155,7 @@
       <img class="section-head-between" src="./merry_gift_2.png" />
       <h1 class="section-head">Registry</h1>
       <p class="voff-md section-text">
-      <!-- TODO -->
+
       </p>
       <div class="columns voff-md">
         <div class="column is-offset-3 is-2">
@@ -261,6 +232,7 @@
     </div>
   </div>
 </footer>
+-->
 
 <script type='text/javascript' src='./fslove.js'></script>
 <script type='text/javascript' src='./countdown.min.js'></script>
