fix for bg video for mobile

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </center>
   </header>
   
-  <video autoplay id="video-background" muted plays-inline>
+  <video id="video-background" autoplay muted plays-inline>
   	<source src="./IMG_4596_2.mov">
   </video>
 
@@ -69,12 +69,12 @@
   -->
 
 <section>
-	<div style="height:85vh">
+	<div style="height:50vh">
 	</div>
 	<center>
 		<button id="rsvp-button"> RSVP</button>
 	</center>
-	<div style="height:15vh">
+	<div style="height:50vh">
 
 </section>
 
