use https jquery

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.39.1/mapbox-gl.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.39.1/mapbox-gl.css' rel='stylesheet' />
 
-<script type='text/javascript' src='http://beta.flockthemes.com/butterfly/video/wp-includes/js/jquery/jquery.js?ver=1.12.4'></script>
+<script type='text/javascript' src='https://code.jquery.com/jquery-1.12.4.js'></script>
 
 
 </head>
