--- a/index.html
+++ b/index.html
@@ -50,8 +50,16 @@
 </div>
 -->
   <header>
+  	<br>
+  	<br>
   	<center>
-        <span class="couple-name"> FRANCIS & SUYOUNG </span>
+        <span class="couple-name">
+        	FRANCIS
+        	<span class="couple-name-icon">
+        		<img src="./bmr.png"/>
+        	</span>
+        	SUYOUNG
+        </span>
     </center>
   </header>
   
@@ -69,13 +77,34 @@
   -->
 
 <section>
-	<div style="height:50vh">
+	<div style="height:70vh">
 	</div>
 	<center>
 		<button id="rsvp-button"> RSVP</button>
 	</center>
-	<div style="height:50vh">
+	<div style="height:30vh">
 
+</section>
+
+<section class="content-section" id="details-section">
+	<h1 class="content-header">THE WEDDING</h1>
+</section>
+
+<!--
+<section>
+	<div id="venue">
+		<img src="./img/dd-outside.png" />
+	</div>
+</section>
+-->
+
+<section>
+	<div id='map'></div>
+</section>
+
+
+<section class="content-section" id="story-section">
+	<h1 class="content-header">OUR STORY</h1>
 </section>
 
 
@@ -227,7 +256,6 @@
       <p>
         <b><a href="https://github.com/fcangialosi/fslove">Built</a></b> in Boston with <i class="fa fa-heart-o"></i> by <a href="mailto:frankc@csail.mit.edu"><i class="fa fa-github-alt"></i></a>
       </p>
-      <!--<p><b></b></p>-->
     </div>
   </div>
 </footer>
