--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <span class="couple-name">
         	FRANCIS
         	<span class="couple-name-icon">
-        		<img src="./bmr.png"/>
+        		<img src="./img/bmr.png"/>
         	</span>
         	SUYOUNG
         </span>
@@ -83,11 +83,13 @@
 		<button id="rsvp-button"> RSVP</button>
 	</center>
 	<div style="height:30vh">
-
+	</div>
 </section>
 
 <section class="content-section" id="details-section">
 	<h1 class="content-header">THE WEDDING</h1>
+	<br>
+
 </section>
 
 <!--
